objects/FieloPRM_LoyaltyEligibleProduct__c.object
<CustomObject>
    <fields>
        <fullName>F_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>PRM Loyalty Eligible Products</relationshipLabel>
        <relationshipName>PRM_Loyalty_Eligible_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRM Country Cluster</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>PRM Loyalty Eligible Products</relationshipLabel>
        <relationshipName>PRM_Loyalty_Eligible_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_CurrentPointValue__c</fullName>
        <label>Current Point Value</label>
        <summarizedField>FieloPRM_ProductPointValue__c.F_PRM_PtValue__c</summarizedField>
        <summaryFilterItems>
            <field>FieloPRM_ProductPointValue__c.TECH_Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloPRM_ProductPointValue__c.F_PRM_LoyaltyEligibleProduct__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>F_PRM_Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PRM_LocalCurrencySalesPrice__c</fullName>
        <label>Local Currency Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PRM_NameDescription__c</fullName>
        <label>Name &amp; Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointValue__c</fullName>
        <formula>IF(ISBLANK(F_PRM_CurrentPointValue__c),F_PRM_PointsInstaller__c,F_PRM_CurrentPointValue__c)</formula>
        <label>Point List Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointsInstaller__c</fullName>
        <inlineHelpText>If no Point Values apply, the Default Points will be assigned to this product</inlineHelpText>
        <label>Default Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_ProductFilter__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>It should start with  P-country code-primary channel code</inlineHelpText>
        <label>Product Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Range__c</fullName>
        <label>Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_RewardValue__c</fullName>
        <formula>F_PRM_ListPrice__c  *  F_PRM_Reward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reward Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_PRM_Reward__c</fullName>
        <label>Reward %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F_PRM_SKU__c</fullName>
        <label>zz_deprecated_SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PRM Loyalty Eligible Product</label>
    <listViews>
        <fullName>AE_RTx_UAE_Retailer_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>United Arab Emirates</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-AE-RT5</value>
        </filters>
        <label>AE-RTx-UAE Retailer Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AE_SCx_UAE_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>United Arab Emirates</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-AE-SC7</value>
        </filters>
        <label>AE-SCx-UAE Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AR_SC7_Argentina_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-AR-SC5</value>
        </filters>
        <label>AR-SCx-Argentina Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Loyalty_Eligible_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>_All Loyalty Eligible Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_SC7_Brazil_Retailer_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-BR-SC7</value>
        </filters>
        <label>BR-SCx-Brazil Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CO_SC7_Colombia_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-CO-SC7</value>
        </filters>
        <label>CO-SCx-Colombia Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GB_SCx_UK_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-GB-SC5</value>
        </filters>
        <label>GB-SCx-UK Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ID_PB4_Indonesia_PanelBuilder_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-ID-PB4</value>
        </filters>
        <label>ID-PB4-Indonesia PanelBuilder Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IN_PB4_India_PanelBuilder_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-IN</value>
        </filters>
        <label>IN-PB4-India PanelBuilder Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MX_SC7_Mexico_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-MX-SC7</value>
        </filters>
        <label>MX-SCx-Mexico Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MX_SCx_Mexico_Electrician_Products_Clone</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Serbia</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-RS-SC5</value>
        </filters>
        <label>RS-SCx-Serbia Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_PB4_Russia_PanelBuilder_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-RU-PB</value>
        </filters>
        <label>RU-PB4-Russia PanelBuilder Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_SC5_Russia_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-RU-SC5</value>
        </filters>
        <label>RU-SC5-Russia Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_SC6_Russia_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-RU-SC6</value>
        </filters>
        <label>RU-SC6-Russia Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RU_SC7_Russia_Electrician_Products</fullName>
        <columns>F_Country__c</columns>
        <columns>F_PRM_ProductFilter__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_PointValue__c</columns>
        <columns>F_PRM_NameDescription__c</columns>
        <columns>F_PRM_Family__c</columns>
        <columns>F_PRM_Range__c</columns>
        <columns>F_PRM_ListPrice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>F_PRM_ProductFilter__c</field>
            <operation>equals</operation>
            <value>P-RU-SC7</value>
        </filters>
        <label>RU-SC7-Russia Electrician Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rewards Eligible Product SKU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Loyalty Eligible Products</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloPRM_PointsCannotBe0</fullName>
        <active>true</active>
        <description>Validate that Points cannot be 0, blank or a negative value</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp;
( OR( ISBLANK( F_PRM_PointsInstaller__c ) ,F_PRM_PointsInstaller__c  &lt;= 0) )</errorConditionFormula>
        <errorDisplayField>F_PRM_PointsInstaller__c</errorDisplayField>
        <errorMessage>Points cannot be 0, blank or a negative value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Filter_Validation</fullName>
        <active>true</active>
        <description>Product filter must begin with P-{countrycode}</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(ISBLANK( F_PRM_ProductFilter__c ) || 
NOT(BEGINS(F_PRM_ProductFilter__c , &quot;P-&quot;+F_Country__r.CountryCode__c )))</errorConditionFormula>
        <errorMessage>Product filter must begin with P-{countrycode}</errorMessage>
    </validationRules>
</CustomObject>